@@ -5,9 +5,5 @@ $Id$
 Things TODO to WEG:
 ===================
 
-o DDE server support (was in WEG 1.x).
+o Implement searching macros for the DDE server.
 
-o Associating .NG files doesn't work so well with WEG now that it is an MDI
-  application. Come up with a method of ensuring that files passed on the
-  command line get opened in a previously running instance of WEG if such an
-  instance exists.
